semi-futile attempt to fix overflow issue with staff-roles modal

--- a/src/main/resources/static/css/custom-tweaks.css
+++ b/src/main/resources/static/css/custom-tweaks.css
@@ -25,8 +25,8 @@ html, body {
 /* multi select box for crud forms */
 
 div.multi-select-box {
-	max-height: 300px;
-	overflow-y: auto;
+	max-height: 150px;
+	overflow-y: scroll;
 }
 
 /* add buttons margin from the bottom */
